--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Resume Website Template Free Download</title>
+        <title>Yusuff k. Resume</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="Resume Website Template Free Download" name="keywords">
         <meta content="Resume Website Template Free Download" name="description">
@@ -71,9 +71,9 @@
                 <div class="header" id="header">
                     <div class="content-inner">
                         <p>I'm</p>
-                        <h1>Michael Miller</h1>
+                        <h1>Yusuff Elegbede</h1>
                         <h2></h2>
-                        <div class="typed-text">Web Designer, Web Developer, Front End Developer, Apps Developer, Graphic Designer</div>
+                        <div class="typed-text">Cloud Engineer, Devops Engineer, Platorm Engineer, Site Reliability Engineer, Terraform Engineer</div>
                     </div>
                 </div>
                 <!-- Header End -->
